--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
 
       </nav>
 
-      <a href="#" class="btn btn-secondary">
-        <span class="text text-1">Find A Table</span>
+      <a href="#reservation" class="btn btn-secondary">
+        <span class="text text-1">Reservation</span>
 
-        <span class="text text-2" aria-hidden="true">Find A Table</span>
+        <span class="text text-2" aria-hidden="true">Reservation</span>
       </a>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
@@ -264,7 +264,7 @@
               Come with family & feel the joy of mouthwatering food
             </p>
 
-            <a href="#" class="btn btn-primary slider-reveal">
+            <a href="#menu" class="btn btn-primary slider-reveal">
               <span class="text text-1">View Our Menu</span>
 
               <span class="text text-2" aria-hidden="true">View Our Menu</span>
@@ -289,7 +289,7 @@
               Come with family & feel the joy of mouthwatering food
             </p>
 
-            <a href="#" class="btn btn-primary slider-reveal">
+            <a href="#menu" class="btn btn-primary slider-reveal">
               <span class="text text-1">View Our Menu</span>
 
               <span class="text text-2" aria-hidden="true">View Our Menu</span>
@@ -307,7 +307,7 @@
           <ion-icon name="chevron-forward"></ion-icon>
         </button>
 
-        <a href="#" class="hero-btn has-after">
+        <a href="#reservation" class="hero-btn has-after">
           <img src="./assets/images/hero-icon.png" width="48" height="48" alt="booking icon">
 
           <span class="label-2 text-center span">Book A Table</span>
@@ -375,7 +375,7 @@
                     <a href="#">Appetizers</a>
                   </h3>
 
-                  <a href="#" class="btn-text hover-underline label-2">View Menu</a>
+                  <a href="#menu" class="btn-text hover-underline label-2">View Menu</a>
 
                 </div>
 
@@ -398,7 +398,7 @@
                     <a href="#">Drinks</a>
                   </h3>
 
-                  <a href="#" class="btn-text hover-underline label-2">View Menu</a>
+                  <a href="#menu" class="btn-text hover-underline label-2">View Menu</a>
 
                 </div>
 
@@ -509,7 +509,7 @@ Our menu is a masterpiece, a carefully orchestrated dance of seasonal ingredient
               <span class="span body-1">Rs. 280.00</span>
             </div>
 
-            <a href="#" class="btn btn-primary">
+            <a href="#menu" class="btn btn-primary">
               <span class="text text-1">View All Menu</span>
 
               <span class="text text-2" aria-hidden="true">View All Menu</span>
@@ -770,7 +770,7 @@ Our menu is a masterpiece, a carefully orchestrated dance of seasonal ingredient
         - #RESERVATION
       -->
 
-      <section class="reservation">
+      <section class="reservation" id="reservation">
         <div class="container">
 
           <div class="form reservation-form bg-black-10">
@@ -1135,11 +1135,11 @@ Our menu is a masterpiece, a carefully orchestrated dance of seasonal ingredient
           </li>
 
           <li>
-            <a href="#" class="label-2 footer-link hover-underline">Menu</a>
+            <a href="#menu" class="label-2 footer-link hover-underline">Menu</a>
           </li>
 
           <li>
-            <a href="#" class="label-2 footer-link hover-underline">About Us</a>
+            <a href="#about" class="label-2 footer-link hover-underline">About Us</a>
           </li>
 
           <li>
