Friendly Fork has got some changes

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="container">
 
       <a href="index.html" class="logo">
-        <img src="./assets/images/logo.svg" width="160" height="50" alt="Friendly Fork - Home">
+        <img src="./assets/images/logo123.png" width="160" height="50" alt="Friendly Fork - Home">
       </a>
 
       <nav class="navbar" data-navbar>
@@ -120,7 +120,7 @@
         </button>
 
         <a href="#" class="logo">
-          <img src="./assets/images/logo.svg" width="160" height="50" alt="Friendly Fork - Home">
+          <img src="./assets/images/logo123.png" width="160" height="50" alt="Friendly Fork - Home">
         </a>
 
         <ul class="navbar-list">
@@ -464,7 +464,7 @@ Our menu is a masterpiece, a carefully orchestrated dance of seasonal ingredient
       <section class="special-dish text-center" aria-labelledby="dish-label">
 
         <div class="special-dish-banner">
-          <img src="./assets/images/special-dish-banner.jpg" width="940" height="900" loading="lazy" alt="special dish"
+          <img src="./assets/images/pesto pasta.jpg" width="940" height="900" loading="lazy" alt="special dish"
             class="img-cover">
         </div>
 
@@ -1058,7 +1058,7 @@ Our menu is a masterpiece, a carefully orchestrated dance of seasonal ingredient
         <div class="footer-brand has-before has-after">
 
           <a href="#" class="logo">
-            <img src="./assets/images/logo.svg" width="160" height="50" loading="lazy" alt="Friendly Fork home">
+            <img src="./assets/images/logo123.png" width="160" height="50" loading="lazy" alt="Friendly Fork home">
           </a>
 
           <address class="body-4">
