--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
       </nav>
 
-      <a href="#" class="btn btn-secondary">
+      <a href="#" class="btn btn-secondary abc">
         <span class="text text-1">Find A Table</span>
 
         <span class="text text-2" aria-hidden="true">Find A Table</span>
@@ -785,7 +785,7 @@ Our menu is a masterpiece, a carefully orchestrated dance of seasonal ingredient
               </p>
 
               <div class="input-wrapper">
-                <input type="text" name="name" placeholder="Your Name" autocomplete="off" class="input-field">
+                <input  id ="abcd" type="text" name="name" placeholder="Your Name" autocomplete="off" class="input-field">
 
                 <input type="tel" name="phone" placeholder="Phone Number" autocomplete="off" class="input-field">
               </div>
@@ -811,7 +811,7 @@ Our menu is a masterpiece, a carefully orchestrated dance of seasonal ingredient
                 <div class="icon-wrapper">
                   <ion-icon name="calendar-clear-outline" aria-hidden="true"></ion-icon>
 
-                  <input type="date" name="reservation-date" class="input-field">
+                  <input id="abcde" type="date" name="reservation-date" class="input-field">
 
                   <ion-icon name="chevron-down" aria-hidden="true"></ion-icon>
                 </div>
@@ -819,7 +819,7 @@ Our menu is a masterpiece, a carefully orchestrated dance of seasonal ingredient
                 <div class="icon-wrapper">
                   <ion-icon name="time-outline" aria-hidden="true"></ion-icon>
 
-                  <select name="person" class="input-field">
+                  <select id="abcdef" name="person" class="input-field">
                     <option value="08:00am">08 : 00 am</option>
                     <option value="04:00am">04 : 00 am</option>
                     <option value="010:00am">10 : 00 am</option>
@@ -1119,7 +1119,7 @@ Our menu is a masterpiece, a carefully orchestrated dance of seasonal ingredient
               <input type="email" name="email_address" placeholder="Your email" autocomplete="off" class="input-field">
             </div>
 
-            <button type="submit" class="btn btn-secondary">
+            <button type="submit" class="btn btn-secondary cdf">
               <span class="text text-1">Subscribe</span>
 
               <span class="text text-2" aria-hidden="true">Subscribe</span>
