Revert "Update index.html"

--- a/index.html
+++ b/index.html
@@ -179,10 +179,6 @@
 
       </nav>
 
-
-      <a href="#" class="btn btn-secondary abc">
-        <span class="text text-1">Find A Table</span>
-
       <a href="#reservation" class="btn btn-secondary">
         <span class="text text-1">Reservation</span>
 
@@ -697,7 +693,7 @@ Our menu is a masterpiece, a carefully orchestrated dance of seasonal ingredient
               </p>
 
               <div class="input-wrapper">
-                <input  id ="abcd" type="text" name="name" placeholder="Your Name" autocomplete="off" class="input-field">
+                <input type="text" name="name" placeholder="Your Name" autocomplete="off" class="input-field">
 
                 <input type="tel" name="phone" placeholder="Phone Number" autocomplete="off" class="input-field">
               </div>
@@ -723,7 +719,7 @@ Our menu is a masterpiece, a carefully orchestrated dance of seasonal ingredient
                 <div class="icon-wrapper">
                   <ion-icon name="calendar-clear-outline" aria-hidden="true"></ion-icon>
 
-                  <input id="abcde" type="date" name="reservation-date" class="input-field">
+                  <input type="date" name="reservation-date" class="input-field">
 
                   
                 </div>
@@ -731,7 +727,7 @@ Our menu is a masterpiece, a carefully orchestrated dance of seasonal ingredient
                 <div class="icon-wrapper">
                   <ion-icon name="time-outline" aria-hidden="true"></ion-icon>
 
-                  <select id="abcdef" name="person" class="input-field">
+                  <select name="person" class="input-field">
                     <option value="08:00am">08 : 00 am</option>
                     <option value="04:00am">04 : 00 am</option>
                     <option value="010:00am">10 : 00 am</option>
@@ -1030,7 +1026,7 @@ Our menu is a masterpiece, a carefully orchestrated dance of seasonal ingredient
               <input type="email" name="email_address" placeholder="Your email" autocomplete="off" class="input-field">
             </div>
 
-            <button type="submit" class="btn btn-secondary cdf">
+            <button type="submit" class="btn btn-secondary">
               <span class="text text-1">Subscribe</span>
 
               <span class="text text-2" aria-hidden="true">Subscribe</span>
